# stm32-rtic

./: Cargo.toml  Embed.toml  build.rs
.cargo/: config  config.toml
images/: convert.md
images/feris/: cropped_greyscale.tga  final.tga
rpm-measure/: Cargo.toml
src/: led_state.rs  main.rs  pzb.rs  pzb_state.rs
tachometer/: Cargo.toml
tachometer/src/: lib.rs
tachometer/src/units/: length.rs  mod.rs  speed.rs  time.rs
