[package]
name = "stm32-rtic"
version = "0.1.0"
authors = ["FlareFlo"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

rtic = {version = "2.1.1", features=["thumbv7-backend", "rtic-monotonics"]}
rtic-sync = "1.3.0"

defmt = "0.3.5"
defmt-rtt = { version = "0.4.0"}
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

embedded-hal = "1.0.0"

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f411"] # replace the model of your microcontroller here

[profile.release]
codegen-units = 4
debug = 2
opt-level = 3            # <-
overflow-checks = false  # <-