workspace = { members = ["tachometer"] }

[package]
name = "stm32-rtic"
version = "0.1.0"
authors = ["FlareFlo"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

rtic = {version = "2.1.1", features=["thumbv7-backend"]}
rtic-sync = "1.3.0"
rtic-monotonics = {version = "1.5.0", features = ["stm32f411ce", "cortex-m-systick"]}

defmt = "0.3.5"
defmt-rtt = { version = "0.4.0"}
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

embedded-hal = "1.0.0"

time = { version = "0.3.34", default-features = false }
ssd1306 = "0.8.4"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
tinytga = "0.5.0"
ringbuffer = { version = "0.15.0", default-features = false }
tachometer = { path = "tachometer", features = ["no-std"]}
format_no_std = "1.0.2"
to-arraystring = "0.1.1"
profont = "0.7.0"

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f411"] # replace the model of your microcontroller here

[profile.release]
codegen-units = 4
debug = 2
opt-level = 3            # <-
overflow-checks = false  # <-
lto = true

[features]
startup-logo = []
